--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
-</head>
-<body>
-    
-    <h1>Cadastro de alunos</h1>
+  </head>
+  <body>
+    <header>
+      <h1>MOVIE TO-GO</h1>
+      <span class="form">
+        <label for="name">Add a title:</label>
+        <input type="text" name="name" id="title" />
+        <input type="submit" value="Adicionar" id="submit" />
+      </span> 
+    </header>
 
+    <div class="main">
+        <section class="movies-container">
+            <h2>MY LIST</h2>
+        </section>
 
-    <label for="name">Nome Completo:</label>
-    <input type="text" name="name" id="name">
-    <br>
-    <label for="name">Data de nascimento:</label>
-    <input type="date" name="age" id="age">
-    <br>
-    <label for="adress">Endereço:</label>
-    <input type="text" name="adress" id="adress">
-    <br>
-    <input type="submit" value="Finalizar" id="submit">
+        <section class="watched-movies">
+            <h2>WATCHED MOVIES</h2>
+        </section>
+    </div>
 
-    <h1>Alunos cadastrados</h1>
-    <span></span>
-
-    <script src="index.js"></script>
-</body>
+    <script src="./assets/index.js"></script>
+  </body>
 </html>
