--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </section>
     </div>
 
-    <script src="./assets/index.js"></script>
+    <script type="module" src="./assets/index.js"></script>
   </body>
 </html>
